self_checklist_proto/static/style.css
/* ... */
.progression-wrapper {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.progression {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  margin-top: 3rem;
  width: 550px;
}

.progression-wrapper.simple .progression {
  flex-direction: row;
  width: unset;
  margin-top: 5rem;
}

.progression-step {
  position: relative;
  display: flex;
  flex-direction: column;
  height: 130px;
  align-items: center;
  justify-content: center;
  text-decoration: none;
}

.progression-step:nth-child(2n) {
  align-self: flex-end;
}

.progression-wrapper.simple .progression-step {
  align-self: unset;
}

@media (max-width:641px) { 
  .progression-wrapper.simple .progression {
    flex-direction: column;
  }

  .progression-wrapper.simple .progression-step {
    margin-bottom: 5rem;
  }
}

.progression-step img.step {
  width: 200px;
  height: 200px;
}

.progression-step img.step.finished {
  display: none;
}

.progression-step.finished img.step {
  display: none;
}

.progression-step.finished img.step.finished {
  display: unset;
}

.progression-step .progression-text {
  font-size: 1rem;
  color: var(--colour-black);
  text-decoration: none;
  margin-bottom: 2px;
  font-weight: bold;
}

.progression-step img.pointer {
  position: absolute;
  right: -5rem;
  bottom: -2.5rem;
  height: 3rem;
  object-fit: fill;
  transform: rotate(115deg);
}

.progression-step:nth-child(2n) img.pointer {
  left: -5rem;
  transform: rotate(245deg);
}

.progression-step img.tick {
  display: none;
}

.progression-step.finished img.tick {
  display: unset;
  width: 2rem;
  position: absolute;
  left: 50%;
  top: calc(50% + 1rem);
  transform: translateX(-50%) translateY(-50%);
}

.progression-step img.star {
  display: none;
}

.progression-step.next img.star {
  display: unset;
  position: absolute;
  left: calc(50% + 3px);
  top: calc(50% + 1rem);
  transform: translateX(-50%) translateY(-50%);
  width: 130%;
  z-index: -1;
  animation: rotating 20s linear infinite;
}

.progression-step.next img.star.second {
  animation: rotating 17s linear infinite;
  animation-delay: -7s;

}

@-webkit-keyframes rotating /* Safari and Chrome */ {
  from {
    transform: translateX(-50%) translateY(-50%) rotate(0deg) ;
  }
  to {
    transform: translateX(-50%) translateY(-50%) rotate(360deg) ;
  }
}
@keyframes rotating {
  from {
    transform: translateX(-50%) translateY(-50%) rotate(0deg) ;
  }
  to {
    transform: translateX(-50%) translateY(-50%) rotate(360deg) ;
  }
}

.footstep {
  position: absolute;
  width: 1rem;
  z-index: -2;
}

@media (max-width:641px) { 
  .footstep {
    width: 0.75rem;
  }

  .list {
    margin-left: 0;
  }

  .progression-step .progression-text {
    font-size: 0.75rem;
  }
}

.top-image {
  position: absolute;
  top: 2.5rem;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.top-image img {
  width: 100px;
}

@media (max-width:641px) { 
  .top-image img {
    width: 60px;
  }
}

.suggestions {
  width: 100%;
  display: flex;
  flex-direction: column;
  margin-bottom: 2rem;
}

.suggestion {
  display: flex;
  flex-direction: column;
  text-decoration: none;
  
  border-radius: 10px;
  background-color: var(--colour-primary);
  margin-bottom: 1rem;
  box-shadow: 5px 5px 0px var(--colour-black);

  box-sizing: border-box;
  padding: 1rem 2rem;
  overflow: hidden;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  background-color: var(--colour-primary-lighter);
  margin-right: 5px;
}

.result-buttons {
  margin-top: 3rem;
  margin-bottom: 1rem;
  display: flex;
  width: 100%;
  flex-direction: row;
  flex-wrap: wrap;
}

.result-button {
  flex: 1;
  background-color: var(--colour-primary-lighter);
  border: none;
  border-radius: 5px;
  padding: 0.5rem 1rem;
  color: var(--colour-white);
  text-wrap: nowrap;
  font-weight: bold;
  font-size: 1rem;
  cursor: pointer;
  box-shadow: 3px 3px 0px var(--colour-black);
  text-decoration: none;
  margin: 0.25rem;
}

.checklist-buttons {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  width: 100%;
}

.restart {
  align-self: center;
  background-color: var(--colour-primary-lighter);
  border: none;
  border-radius: 5px;
  padding: 0.5rem 1rem;
  color: var(--colour-white);
  text-wrap: nowrap;
  font-weight: bold;
  font-size: 1rem;
  cursor: pointer;
  box-shadow: 3px 3px 0px var(--colour-black);
  text-decoration: none;
  margin: 0.25rem;
}

.hidden {
  display: none;
}

